Closed Bug 1296524 Opened 8 years ago Closed 8 years ago

Firefox crashes while browsing/scrolling webpages

Categories

(Firefox :: Untriaged, defect)

48 Branch
ARM
Linux
defect
Not set
critical

Tracking

()

VERIFIED FIXED
Firefox 51
Tracking Status
firefox48 --- wontfix
firefox49 --- fixed
firefox50 --- fixed
firefox51 --- verified

People

(Reporter: rbhagwat, Assigned: gw280, NeedInfo)

References

Details

(Keywords: 64bit)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.106 Safari/537.36

Steps to reproduce:

Load any webpage(I tried nytimes.com) and scroll the page. 

Platform: arm64, linux

Attaching bracktrace of crash and backtrace of suspected function which is causing crash.


Actual results:

In few moment firefox crashes


Expected results:

Firefox should not crash
Platform is amr64 linux
Severity: normal → critical
Keywords: 64bit
OS: Unspecified → Linux
Hardware: Unspecified → ARM
This is because we don't enable MOZ_ENABLE_SKIA on aarch64: https://dxr.mozilla.org/mozilla-central/source/old-configure.in#5245

The simplest fix here might be to only add the Skia BackendType to the canvasMask here when USE_SKIA is set: https://dxr.mozilla.org/mozilla-central/source/gfx/thebes/gfxPlatform.cpp?q=gfxPlatform.cpp&redirect_type=direct#504
Assignee: nobody → gwright
Attachment #8783353 - Flags: review?(mchang) → review+
Pushed by gwright@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/0ed0fb296e50
Don't add Skia to the allowable canvas types unless USE_SKIA is defined r=mchang
See Also: → 1137305
Rahul, can you confirm that this patch fixes your issue?
Flags: needinfo?(rbhagwat)
Issue seems fixed at my side. I've tested the patch on arm64 linux platform.
It would be great if this patch is submitted to v48 so that we can use current released firefox on arm64 platforms.
I tested on firefox v48.
https://hg.mozilla.org/mozilla-central/rev/0ed0fb296e50
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 51
Comment on attachment 8783353 [details] [diff] [review]
0001-Bug-1296524-Don-t-add-Skia-to-the-allowable-canvas-t.patch

Approval Request Comment
[Feature/regressing bug #]: 1296524
[User impact if declined]: certain (non-tier1) platforms will crash reliably and often when using the browser
[Describe test coverage new/current, TreeHerder]: current tests are fine; wasn't caught by test infrastructure as it doesn't affect platforms we officially support and test on.
[Risks and why]: very low risk, only changes platforms which USE_SKIA is not defined on which is none of our tier 1s.
[String/UUID change made/needed]: none
Attachment #8783353 - Flags: approval-mozilla-release?
Attachment #8783353 - Flags: approval-mozilla-beta?
Attachment #8783353 - Flags: approval-mozilla-aurora?
Comment on attachment 8783353 [details] [diff] [review]
0001-Bug-1296524-Don-t-add-Skia-to-the-allowable-canvas-t.patch

Fixes a severe crash, fix was verified on try push by bug filer (I think), Aurora50+
Attachment #8783353 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment on attachment 8783353 [details] [diff] [review]
0001-Bug-1296524-Don-t-add-Skia-to-the-allowable-canvas-t.patch

Review of attachment 8783353 [details] [diff] [review]:
-----------------------------------------------------------------

This patch fixes a crash. Take it in 49 beta.
Attachment #8783353 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Do we have some crash id to evaluate the impact? thanks
Rahul, do you have any crash reports for this issue? about:crashes will show you recently submitted crash reports.
I reproduced the crash but I could not get crash report when type about:crashes in both normal and safe mode, pages display message  "The address isn't valid".
But I've already uploaded backtrace of crash in this bug.
Attachment #8783353 - Flags: approval-mozilla-release? → approval-mozilla-release-
May I know in which release the fix will be available?
I’ve tested forefox v49, still I’m getting crash but this time whole browser does not crash, only tab crashes.
Hi Rahul, based on the commit dates, this fix has shipped in Release Fx49 version. 

Hi George, can you please investigate Rahul's comment that this crash may not really be fixed in Fx49? Thanks!
Flags: needinfo?(gwright)
Rahul, do you have a backtrace?
Flags: needinfo?(gwright)
[bugday-20170125]
[bugday-20170125] OS:Windows 8.1, I gone through the website nytimes.com . and its works correctly, the bug has been fixed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: