Bug 1296524 - Don't add Skia to the allowable canvas types unless USE_SKIA is defined. r=mchang, a=ritu

--HG--
extra : source : 0ed0fb296e50b8f3a8e4dae296a7ee6e841b1bb8